fix: missing html tag, and add css word-wrap

--- a/src/main/webapp/assets/css/indexAdmin.css
+++ b/src/main/webapp/assets/css/indexAdmin.css
@@ -33,7 +33,8 @@
 	color: #0073e6;
 	font-size: 22px;
 	margin-bottom: 10px;
-	white-space: nowrap;
+	white-space: none;
+	word-wrap: break-word;
 }
 
 .featured-sections section p {
